# My_IS_Bot

./: .gitignore  Execute Instructions.md  MUJOCO_LOG.TXT  README.md  arm_controller.py  arm_env_base.py  arm_server.py  arm_test.py  arm_test_retract.py  base_controller.py  base_server.py  cameras.py  coding_notes.md  constants.py  convert_to_robomimic_hdf5.py  diffusion-policy.patch  episode_storage.py  gamepad_teleop.py  ik_solver.py  is_kinova_env.py  is_kinova_teleop.py  is_main.py  is_mesh_main.py  is_mujoco_env.py  is_mujoco_mesh_env.py  is_real_env.py  kinova.py  main.py  mjmodel.xml  mkdocs.yml  mujoco_env.py  plot_base_state.py  plot_demos.ipynb  policies.py  policy_server.py  random_env_constant.py  real_env.py  realsense_camera.py  replay_episodes.py  requirements.txt  (+6 more)
docs/: 404.html  (+5 more)
models/assets/bobac3_description(1)/bobac3_description/: CMakeLists.txt  package.xml  readme.md
models/assets/bobac3_description(1)/bobac3_description/config/: control.yaml
models/assets/bobac3_description(1)/bobac3_description/launch/: display.launch  gazebo.launch
models/assets/bobac3_description(1)/bobac3_description/meshes/: base_berxel_camera_link.STL  basic_kit_link.STL  basic_kit_link_cspc.STL  bottom_camera_link.STL  charge_link.STL  cover_link.STL  cover_link_cspc.STL  delivery_kit_link.STL  disinfection_kit_link.STL  front_lidar_link_cspc.STL  front_wheel_link.STL  humtemper_link.STL  humtmper_link.STL  left_ultrasound_link.STL  left_wheel_link.STL  omni_fixed_link.STL  omni_wheel_body_link.STL  rear_lidar_link.STL  rear_lidar_link_cspc.STL  rear_wheel_link.STL  right_ultrasound_link.STL  right_wheel_link.STL  roller_link.STL  smoke_sensor_link.STL  top_camera_link.STL
models/assets/bobac3_description(1)/bobac3_description/rviz/: urdf.rviz
models/assets/bobac3_description(1)/bobac3_description/scripts/: install.sh
models/assets/bobac3_description(1)/bobac3_description/src/: gazebo_kinematics.cpp  gazebo_kinematics.h  main.cpp
(+367 files in other folders)
